Added link to GitHub on HTML

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
                     </div>
                 </div>
             </div>
+            <a href="https://github.com/karenleeav/weather-application">Open Source Code</a>
+            <span>by Karen Avidar</span>
         </div>
     </div>
     <script src="src\index.js"></script>
