on-style to location

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </form>
 
             <h1>
-                <span class="location-style" id="location"></span>
+                <span class="location" id="location"></span>
                 <br />
                 <span class="date" id="filler"> </span>
             </h1>
